--- a/reportMaster2/main.tex
+++ b/reportMaster2/main.tex
@@ -76,7 +76,9 @@
 
 Ce rapport concerne le stage de fin d'études que j'ai effectué chez INRIA Bordeaux (Institut National de Recherche en Informatique et Automatisme) au sein de l'équipe Storm. Le stage s'est déroulé du $1^{er}$ février $2015$ au $31$ juillet $2015$, encadré par Olivier Aumage et Denis Barthou. Olivier Aumage est chargé de recherche dans l'équipe Storm. Denis Barthou est le directeur de cette équipe, il est également professeur à l'Institut Polytechnique de Bordeaux (IPB). L'intitulé du stage était \og Extraction automatisée de parallélisme de tâches, et expression dans le formalisme SYCL \fg.
 
-Du point de vue académique ce stage sera évalué à la fois par l'Enseirb-Matmeca dans le cadre du diplôme d'ingénieur en informatique avec spécialité PRCD (Parallélisme, Régulation et Calcul Distribué) -- et par l'Université de Bordeaux dans le cadre du master de recherche informatique RSM (Réseaux et Systèmes Mobiles, parcours Calcul Haute Performance). À ce titre mes tuteurs respectifs sont Denis Barthou et Paul Dorbec.
+INRIA est un organisme de recherche créé en $1967$ et maintenant présent dans plusieurs grandes villes françaises telles que Nancy, Rennes, Paris ou Bordeaux. Au total environ $1800$ scientifiques sont employés et participent autant à la recherche fondamentale qu'appliquée, ainsi qu'aux transferts technologiques vers les entreprises. Les domaines de compétences sont variés : traitement d'images, traitement de données, sciences cognitives et aide à la personne, calcul haute performance ou encore systèmes embarqués. 
+
+Du point de vue académique ce stage sera évalué à la fois par l'Enseirb-Matmeca dans le cadre du diplôme d'ingénieur en informatique avec spécialité PRCD (Parallélisme, Régulation et Calcul Distribué), et par l'Université de Bordeaux dans le cadre du master de recherche informatique RSM (Réseaux et Systèmes Mobiles, parcours Calcul Haute Performance). À ce titre mes tuteurs respectifs sont Denis Barthou et Paul Dorbec.
 
 \section*{Remerciements}
 
